# sk

./: .gitignore  AGENTS.md  Cargo.toml  GORYDETAILS.md  Makefile  README.md  azure-pipelines.yml  lcov.info  skills.lock.json
.beads/: .gitignore  issues.jsonl  seed_created.json
.circleci/: config.yml
.codex/: config.toml
.github/workflows/: ci.yml  release-plz.yml
.qlty/: qlty.toml
docs/: AGENT_QUICKSTART.md  testing.md
history/: MISSION_SK.md  PR_BODY_feat_precommit_file_url.md  PR_BODY_sk-6cd.md  PR_BODY_sk-b75.md  mcp-skills-server-design.md  pr-sk-2om.md  sk-5tl-pr-body.md  sk-h12-plan.md
scripts/: codex-review-state.sh  codex-unreplied.sh  coverage.sh  install-precommit-hook.sh  install-qlty.sh  pr-draft.sh  pr-ready.sh  qlty-smells.sh  run-dumbwaiter-mcp.sh
src/: cli.rs  completions.rs  config.rs  digest.rs  doctor.rs  git.rs  install.rs  lib.rs  lock.rs  main.rs  mcp.rs  paths.rs  precommit.rs  remove.rs  repo.rs  skills.rs  sync.rs  template.rs  update.rs  upgrade.rs
src/sync/: mod.rs  (+3 more)
tests/: check_modified.rs  cli_lifecycle.rs  completions.rs  diff.rs  digest_line_endings.rs  doctor.rs  doctor_rebuild.rs  file_url_cache_collisions.rs  init.rs  install_ambiguous.rs  install_file_url.rs  list_cli.rs  mcp_server.rs  paths_cache.rs  precommit.rs  quickstart.rs  release_plz_workflow.rs  remove.rs  repo.rs  skills_frontmatter.rs  skills_list.rs  status.rs  sync_back.rs  template.rs  update_cache_only.rs  upgrade_atomicity.rs  upgrade_fetch.rs  upgrade_ref.rs  upgrade_rollback.rs  upgrade_skip_diff.rs  upgrade_symlink.rs  upgrade_symlink_windows.rs
(+18 files in other folders)
