[package]
name = "sk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Repo-scoped Claude Skills manager"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
ignore = "0.4"
sha2 = "0.10"
rayon = { version = "1", optional = true }
which = "8"
directories = "6"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
gix-url = "0.33"
crossbeam-channel = "0.5"
notify = { version = "8", default-features = false, features = ["macos_kqueue", "serde"] }
owo-colors = "4"
unicode-width = "0.2"
rmcp = { version = "0.8.5", features = ["transport-io"] }
schemars = { version = "1.1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-std"] }

[features]
default = []

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"
